fix: added filtering for duplicates in data